--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ git:
 matrix:
   include:
     - os : linux
+      dist: trusty
       language: cpp
       python: "3.6"
 
     - os : windows
-      language : cpp
+      language : shell
       python: "3.6"
 
-script: python3 --version && pip3 --version
+script: python3 --version
