--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
 
     - os : windows
       language : shell
-      python: "3.6"
+      before_install:
+        - choco install python --version=3.8.0
 
-script: python3 --version
+
+script: python3 --version || python --version
