--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ matrix:
     - os : windows
       language : cpp
       before_install:
-        # - choco install python --version=3.8.0
-        # - export PATH=/C/Python38:$PATH
+        - choco install python --version=3.8.0
+        - export PATH=/C/Python38:$PATH
         - alias python=python3
 
 
-script: python3 --version; python --version; echo ~; ls
+script: python3 --version; python --version; pip3 --version; pip --version; echo ~; ls; pwd
