--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ matrix:
       language: cpp
       python: "3.6"
       before_install:
+        - sudo add-apt-repository -y ppa:deadsnakes/ppa
+        - sudo apt-get -q update
+        - sudo apt-get -y python3 python3-pip
+        - sudo python3 -m pip install requests uritemplate discord-webhook
         - alias python=python3
 
     - name: 'Build on Windows'
@@ -24,7 +28,8 @@ matrix:
       before_install:
         - choco install python --version=3.6.0
         - export PATH=/C/Python38:$PATH
-        - ls -la '/C/Program Files (x86)/Microsoft Visual Studio/'
+        - cmd /C "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvars32.bat"
+        # - ls -la '/C/Program Files (x86)/Microsoft Visual Studio/'
 
 
 script: python3 --version; python --version; pip3 --version; pip --version; echo ~; ls; pwd; cl; echo 'ok?'
