--- a/.travis.yml
+++ b/.travis.yml
@@ -13,20 +13,20 @@ matrix:
       os: linux
       dist: trusty
       language: cpp
-      python: "3.6"
+      python: "3.7"
       before_install:
         - sudo add-apt-repository -y ppa:deadsnakes/ppa
         - sudo apt-get -q update
-        - sudo apt-get -y python3 python3-pip
+        - sudo apt-get -y install python3 python3-pip
         - sudo python3 -m pip install requests uritemplate discord-webhook
         - alias python=python3
 
     - name: 'Build on Windows'
       os: windows
       language: cpp
-      python: "3.6"
+      python: "3.7"
       before_install:
-        - choco install python --version=3.6.0
+        - choco install python --version=3.7.0
         - export PATH=/C/Python38:$PATH
         - cmd /C "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvars32.bat"
         # - ls -la '/C/Program Files (x86)/Microsoft Visual Studio/'
