--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ matrix:
       before_install:
         - choco install python --version=3.7.0
         - export PATH=/C/Python38:$PATH
-        - cmd /C "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvars32.bat"
+        - cmd /C '"C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvarsall.bat" x86 && echo "loaded!"'
         # - ls -la '/C/Program Files (x86)/Microsoft Visual Studio/'
 
 
