--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,21 @@ matrix:
       os: linux
       dist: trusty
       language: cpp
-      python: "3.7"
+      python: "3.4"
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-7.0
+            - llvm-toolchain-trusty-8.0
+        cache:
+          directories:
+            - mysql-5.0
+            - clang-9
       before_install:
-        - sudo add-apt-repository -y ppa:deadsnakes/ppa
+        - export WDIR=$(pwd)
+        - export PATH=~/.local/bin:$WDIR/clang9:$PATH
+        # - sudo add-apt-repository -y ppa:deadsnakes/ppa
         - sudo apt-get -q update
         - sudo apt-get -y install python3 python3-pip
         - sudo python3 -m pip install requests uritemplate discord-webhook
@@ -28,7 +40,8 @@ matrix:
       before_install:
         - choco install python --version=3.7.0
         - export PATH=/C/Python38:$PATH
-        - cmd /C '"C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvarsall.bat" x86 && echo "loaded!"'
+        # - cmd /C '"C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvarsall.bat" x86 && echo "loaded!"'
+        - '/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/VC/Auxiliary/Build/vcvarsall.bat' x86
         # - ls -la '/C/Program Files (x86)/Microsoft Visual Studio/'
 
 
