--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,16 @@ branches:
   only:
     - master
 
-sudo: required
+os:
+  - linux
+  - windows
+
+language: cpp
 
 git:
   depth: 10
 
-matrix:
+jobs:
   include:
     - name: 'Build on Linux (Ubuntu 14.04)'
       os: linux
@@ -29,7 +33,7 @@ matrix:
       before_install:
         - choco install python --version=3.7.0
         - export PATH=/C/Python38:$PATH
-        - /C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/VC/Auxiliary/Build/vcvars32.bat
+        - "/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/VC/Auxiliary/Build/vcvars32.bat"
 
 
 script: python3 --version; python --version; pip3 --version; pip --version; echo ~; ls; pwd; cl; echo 'ok?'
