--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,6 @@ branches:
   only:
     - master
 
-os:
-  - linux
-  - windows
-
 language: cpp
 
 git:
@@ -33,7 +29,7 @@ jobs:
       before_install:
         - choco install python --version=3.7.0
         - export PATH=/C/Python38:$PATH
-        - "/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/VC/Auxiliary/Build/vcvars32.bat"
+        - cmd /C 'windows_run.bat'
 
 
 script: python3 --version; python --version; pip3 --version; pip --version; echo ~; ls; pwd; cl; echo 'ok?'
