--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
       before_install:
         - choco install python --version=3.7.0
         - export PATH=/C/Python38:$PATH
-        - cmd /C 'echo 1234567'
+        - powershell "echo 123456"
 
 
 script: python3 --version; python --version; pip3 --version; pip --version; echo ~; ls; pwd; cl; echo 'ok?'
