--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
       before_install:
         - choco install python --version=3.7.0
         - export PATH=/C/Python38:$PATH
-        - powershell "echo 123456"
+        - powershell "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvarsall.bat; cl; echo 12345"
 
 
 script: python3 --version; python --version; pip3 --version; pip --version; echo ~; ls; pwd; cl; echo 'ok?'
