--- a/.travis.yml
+++ b/.travis.yml
@@ -21,16 +21,17 @@ jobs:
         - sudo apt-get -y install python3 python3-pip
         - sudo python3 -m pip install requests uritemplate discord-webhook
         - alias python=python3
+      script: python3 --version; python --version; pip3 --version; pip --version; echo ~; ls; pwd;
 
     - name: 'Build on Windows'
       os: windows
       language: cpp
-      python: "3.7"
+      python: "3.8"
       before_install:
         - export WDIR=$(pwd)
         - choco install python --version=3.7.0
         - export PATH=/C/Python38:$PATH
-        - cd '/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/VC/Auxiliary/Build/' && powershell ".\vcvarsall.bat x86; cl; echo 12345" && cd $WDIR && pwd
+      script:
+        - cd '/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/VC/Auxiliary/Build/' && powershell "cmd /C '.\vcvarsall.bat x86; cl; echo 12345'" && cd $WDIR && pwd
 
-
-script: python3 --version; python --version; pip3 --version; pip --version; echo ~; ls; pwd; cl; echo 'ok?'
+# script: python3 --version; python --version; pip3 --version; pip --version; echo ~; ls; pwd; cl; echo 'ok?'
