--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ jobs:
 
     - name: 'Build on Windows'
       os: windows
-      language: cpp
-      python: "3.8"
+      compiler: msvc
+      # language: cpp
+      # python: "3.8"
       before_install:
         - export WDIR=$(pwd)
         - choco install python --version=3.7.0
