--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
       script: 
         - echo "pwd = $WDIR"
         - python --version; python -m pip --version; pwd;
-        - [ -d "../clang-9" ] || (curl -SL https://bitbucket.org/rom4s/other.get/downloads/clang-9.tar.xz | tar -xJC ..)
+        - if[ -d "../clang-9" ]; then (curl -SL https://bitbucket.org/rom4s/other.get/downloads/clang-9.tar.xz | tar -xJC ..); fi
         - ls -la
       cache:
         - ../clang-9
