--- a/.travis.yml
+++ b/.travis.yml
@@ -47,3 +47,5 @@ jobs:
         - echo "pwd = $WDIR"
         - powershell '.\windows_run.bat'
         - python --version; python -m pip --version; pwd;
+      cache:
+        - /C/Python38
