--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,10 @@ jobs:
       python: "3.8"
       before_install:
         - export WDIR=$(pwd)
-        - if [ ! -d "/C/Python38" ]; then (choco install python --version=3.8.0); fi
         - export PATH=/C/Python38:/C/Python38/Scripts:$PATH
+        - if [ ! -d "/C/Python38" ]; then (choco install python --version=3.8.0); fi
+        - if [ ! -d "/C/Python38" ]; then (echo 123456); fi
+        - if [ -d "/C/Python38" ]; then (echo 8966122); fi
         - python -m pip install --upgrade pip
         - python -m pip install requests uritemplate discord-webhook
       script:
@@ -48,4 +50,4 @@ jobs:
         - powershell '.\windows_run.bat'
         - python --version; python -m pip --version; pwd;
       cache:
-        - /C/Python38
+        - C:\Python38
