--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,7 @@ jobs:
         - source $HOME/.pythonz/etc/bashrc && $(pythonz locate $PYTHON_VER) --version >/dev/null 2>&1 || pythonz install $PYTHON_VER
         - mkdir -p $HOME/.local/bin/ && ln -s $(pythonz locate $PYTHON_VER) $HOME/.local/bin/python
         - python -m pip install --upgrade pip
-        # - sudo -i add-apt-repository -y ppa:deadsnakes/ppa
-        # - sudo -i apt-get -q update
-        # - sudo -i apt-get -y install python3.6 python3.6-venv
-        # - sudo -i update-alternatives --install /usr/bin/python python /usr/bin/python3.6 1
-        # - sudo -i sh -c "curl https://bootstrap.pypa.io/get-pip.py | python"
-        # - sudo -i python -m pip install requests uritemplate discord-webhook
+        - python -m pip install requests uritemplate discord-webhook
         - if [ ! -d "../clang-9/bin" ]; then (curl -SL https://bitbucket.org/rom4s/other.get/downloads/clang-9-ubuntu-14.04.tar.xz | tar -xJC ..); fi
       script: 
         - echo "pwd = $WDIR"
